footer and icon added

--- a/index.html
+++ b/index.html
@@ -161,6 +161,30 @@
         </div>
     </section>
 
+    <!-- Our Sponspors  -->
+
+    <section>
+        <div class="banner">
+            <div>
+
+                <h1 class="banner-title">Our Sponspors</h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.
+                </p> <br>
+                <br>
+                <div class="spo-pic"><img src="images/sponsors/amazon.png" alt="">
+                    <img src="images/sponsors/figma.png" alt="">
+                    <img src="images/sponsors/google.png" alt="">
+                    <img src="images/sponsors/spotify.png" alt="">
+                    <img src="images/sponsors/telerama.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="header footer-text">
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 
 
 
